Point to format specification in contributing info

--- a/view/contribute.html.haml
+++ b/view/contribute.html.haml
@@ -12,7 +12,9 @@
   = link( "https://projects.kde.org/projects/websites/inqlude-data" ) + "."
   It contains a manifest file in JSON format for each library, which has the
   meta data in a structured machine-readable form. JSON is easy enough for
-  humans to read and edit as well.
+  humans to read and edit as well. See the
+  = link_to "specification of the manifest format", "https://github.com/cornelius/inqlude/blob/master/manifest-format.md"
+  for documentation about what to put into the manifest.
 %p
   You can contribute meta data by providing patches to the inqlude-data
   repository. Use the github mechanisms or just send patches by email.
