--- a/view/two-column/layout.html.haml
+++ b/view/two-column/layout.html.haml
@@ -5,49 +5,101 @@
   - if enable_search
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="https://www.google.com/cse/style/look/default.css" type="text/css" />
-%body
-  .ribbon
-    = link_to "Alpha", "about"
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="public/inqlude.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-  .container
-    .header
-      .logo
-        %h1
-          %span.logo><
-            \#in
-          %span.logo.green><
-            q
-          %span.logo><
-            lude
-        %h2
-          %span.subtitle
-            The Qt library archive
-      .menu
+%body
+
+  .container-fluid.header
+
+    .col-md-8.logo    
+      %h1
+        %span.logo><
+          \#in
+        %span.logo.green><
+          q
+        %span.logo><
+          lude
+      %h2
+        %span.subtitle
+          The Qt library archive
+
+    .col-md-4.search  
+      - if enable_search
+        %gcse:searchbox-only{ resultsUrl: "https://inqlude.org/search.html" }
+          Loading...
+    %br{ :clear => "all" }
+
+  .container-fluid.content
+
+    .col-sm-3.side-bar
+
+      .col-sm-12.description
+        %p
+          Inqlude provides a comprehensive listing of all existing libraries for developers of applications using the Qt toolkit. Inqlude is run by the community and open for contributions. 
+      
         %ul
           %li
-            = link_to "Home", "index"
+            = link_to "About", "about"
           %li
             = link_to "How to get libraries", "get"
           %li
-            = link_to "How to contribute", "contribute"
-          %li
-            = link_to "About", "about"
-        .search
-          - if enable_search
-            %gcse:searchbox-only{ resultsUrl: "https://inqlude.org/search.html" }
-              Loading...
-      %br{ :clear => "all" }
+            = link_to "How to contribute", "contribute"          
+          
+      .col-sm-12.title 
+        Latest releases   
+      .col-sm-12.latest-releases 
+        %table
+          %tr
+            %td
+              - latest_libraries.each do |library|
+                - if library.latest_manifest.display_name
+                  = link_to_library(library.latest_manifest.name, library.latest_manifest.display_name)
+                - else
+                  = link_to_library(library.latest_manifest.name, library.latest_manifest.name)
+                %date
+                  = '(' + library.latest_manifest.release_date + ')'
+                %br                
+        
+      .col-sm-12.title
+        Filters
+      .col-sm-12.filters
+        .col-sm-7.filter-topics
+          %h6
+            Topics
+          - topics.each do |topic|
+            %input{:type=>"checkbox", :name=>"#{topic}"}
+            = topic            
+            %br     
 
-    .content
+        .col-sm-5.filter-platforms
+          %h6
+            Platforms
+          - platforms.each do |platform|
+            %input{:type=>"checkbox", :name=>"#{platform}"}
+            = platform
+            %br     
+        
+        .col-sm-5.filter-licenses
+          %h6
+            Licenses
+          - licenses.each do |license|
+            %input{:type=>"checkbox", :name=>"#{license}"}
+            = license
+            %br     
+
+    .col-sm-9.main-pane 
       = yank
 
       %br{ :clear => "all" }
 
-  .legal
-    Inqlude is a
-    = link_to "KDE project", "http://kde.org"
-    = "|"
-    = link_to "Legal", "http://www.kde.org/community/whatiskde/impressum.php"
+      .legal
+        Inqlude is a
+        = link_to "KDE project", "http://kde.org"
+        = "|"
+        = link_to "Legal", "http://www.kde.org/community/whatiskde/impressum.php"
 
   - if enable_search
     :javascript
