--- a/view/two-column/public/inqlude.css
+++ b/view/two-column/public/inqlude.css
@@ -1,5 +1,4 @@
 body {
-  background-color: #eee;
   color: #111;
   margin: 0px;
   font-family: 'Droid Sans', arial, serif;
@@ -22,106 +21,149 @@ a:active {
   text-decoration: underline;
 }
 
-.ribbon {
-  background-color: #a00;
-  overflow: hidden;
-  position: absolute;
-  left: -2em;
-  top: 1em;
-  -moz-transform: rotate(-45deg);
-  -webkit-transform: rotate(-45deg);
-  -moz-box-shadow: 0 0 1em #888;
-  -webkit-box-shadow: 0 0 1em #888;
-}
-.ribbon a {
-  border: 1px solid #faa;
-  color: #fff;
-  display: block;
-  font: bold 81.25% 'Helvetiva Neue', Helvetica, Arial, sans-serif;
-  margin: 0.05em 0 0.075em 0;
-  padding: 0.5em 3.5em;
-  text-align: center;
-  text-decoration: none;
-  text-shadow: 0 0 0.5em #444;
-}
-
 h1 {
-  text-align: center;
   font-family: monospace;
   font-size: 200%;
   font-weight: normal;
-  margin-top: 0px;
   margin-bottom: 0px;
+  padding-top: 5px;
 }
 
 h1 .logo {
-  font-size: 200%;
+  font-size: 180%;
   font-weight: bold;
-  margin: 0px;
 }
 
 h1 .green {
   color: #80C342;
 }
 
-
-h1 .subtitle {
-  padding-left: 12px;
+h2 {
+  margin-top: -5px;
 }
 
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 18px;
-  width: 940px;
-  background-color: #f8f8f8;
-  padding: 20px;
-  padding-top: 0px;
-  -webkit-box-shadow: 0px 6px 15px rgba(50, 50, 50, 0.6);
-  -moz-box-shadow:    0px 6px 15px rgba(50, 50, 50, 0.6);
-  box-shadow:         0px 6px 15px rgba(50, 50, 50, 0.6);
+h2 .subtitle {
+  font-weight: bold;  
+  font-size: 78%;
 }
 
-.header {
-  margin-left: -30px;
-  width: 980px;
-  background-color: #fafafa;
-  padding: 10px;
-  -webkit-box-shadow: 0px 6px 20px rgba(50, 50, 50, 0.5);
-  -moz-box-shadow:    0px 6px 20px rgba(50, 50, 50, 0.5);
+h3, h4, h6 {
+  font-weight: bold;  
+}
+
+.container-fluid.header {  
+  -webkit-box-shadow: 0px 6px 0px rgba(50, 50, 50, 0.5);
+  -moz-box-shadow:    0px 6px 0px rgba(50, 50, 50, 0.5);
   box-shadow:         0px 6px 20px rgba(50, 50, 50, 0.5);
+  background-color: #eee;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
-.logo {
-  float: left;
-  margin: 20px;
-}
-
-.menu {
-  margin-right: 20px;
+.col-md-8.logo {
+  margin-top: -10px;
   padding: 0px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+}
+
+.col-md-4.search {
   text-align: right;
+  padding-top: 50px;
+}
+
+.container-fluid.content {
+  padding-right: 10px;
+  padding-left: 10px;
+}
+
+.col-sm-3.side-bar {
+  padding: 0px;
+}
+
+.col-sm-12.description {
+  text-align: justify;
+  background-color: #eee;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  padding: 5px;
+}
+
+.col-sm-12.title {  
+  background-color: #a4d477;
+  font-weight: bold;
+  padding: 0px;
+  padding-left: 5px;
+}
+
+.col-sm-12.latest-releases {
+  background-color: #eee;
+  margin-bottom: 5px;
+  padding-left: 30px;
+}
+
+.col-sm-12.filters {
+  background-color: #eee;
+  margin-bottom: 5px;
+  padding: 5px;
+}
+
+.col-sm-5.filter-platforms {
+  margin-bottom: 20px;
+}
+
+.col-sm-9.main-pane {  
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 0px;
+}
+
+.col-sm-12.inner-box {
+  text-align: justify;
+  padding: 30px;
+  padding-top: 0px;
+}
+
+date {
   float: right;
 }
 
-.menu ul {
-  list-style-type: none;
+ul {
+  list-style-type: circle;
+  padding-left: 30px;
 }
 
-.search {
-  width: 250px;
+table.table-hover tr:hover td, .table-hover tbody tr:hover th {
+  background-color: #a4d477;
 }
 
-.menu_items {
-  color: white;
+tr:nth-child(even) {
+  background-color: #eee;
 }
 
-.menu_items a {
-  color: white;
+td {
+  vertical-align: top;
+  padding: 5px;
 }
 
-.content {
-  padding-top: 10px;
+td.name {
+  width: 15%;
+}
+
+td.summary {
+  width: 35%;
+}
+
+td.platforms {
+  width: 10%;
+}
+
+td.topics {
+  width: 20%;
+}
+
+td.licenses {
+  width: 20%;
 }
 
 .code {
@@ -146,9 +188,22 @@ h1 .subtitle {
   font-style: italic;
 }
 
-td {
-  vertical-align: top;
-  padding-left: 16px;
+.col-sm-12.topics-bar {
+  padding: 0px;
+}
+
+.labels {
+  background-color: #a4d477;
+  margin-right: 10px;
+  font-size: 13px;
+  float: left;
+  padding: 4px;
+}
+
+home {
+  float: right;
+  font-style: italic;
+  margin-right: 30px;
 }
 
 .footer {
