--- a/view/two-column/public/inqlude.css
+++ b/view/two-column/public/inqlude.css
@@ -1,5 +1,4 @@
 body {
-  background-color: #eee;
   color: #111;
   margin: 0px;
   font-family: 'Droid Sans', arial, serif;
@@ -46,82 +45,164 @@ a:active {
 }
 
 h1 {
-  text-align: center;
   font-family: monospace;
   font-size: 200%;
   font-weight: normal;
-  margin-top: 0px;
   margin-bottom: 0px;
+  padding-top: 5px;
+  margin-left: 40px;
 }
 
 h1 .logo {
-  font-size: 200%;
+  font-size: 180%;
   font-weight: bold;
-  margin: 0px;
 }
 
 h1 .green {
   color: #80C342;
 }
 
-
-h1 .subtitle {
-  padding-left: 12px;
+h2 {
+  margin-top: -5px;
+  margin-left: 40px;
 }
 
-.container {
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 18px;
-  width: 940px;
-  background-color: #f8f8f8;
-  padding: 20px;
-  padding-top: 0px;
-  -webkit-box-shadow: 0px 6px 15px rgba(50, 50, 50, 0.6);
-  -moz-box-shadow:    0px 6px 15px rgba(50, 50, 50, 0.6);
-  box-shadow:         0px 6px 15px rgba(50, 50, 50, 0.6);
+h2 .subtitle {
+  font-weight: bold;  
+  font-size: 78%;
 }
 
-.header {
-  margin-left: -30px;
-  width: 980px;
-  background-color: #fafafa;
-  padding: 10px;
-  -webkit-box-shadow: 0px 6px 20px rgba(50, 50, 50, 0.5);
-  -moz-box-shadow:    0px 6px 20px rgba(50, 50, 50, 0.5);
+h3, h4, h6 {
+  font-weight: bold;  
+}
+
+.container-fluid.header {  
+  -webkit-box-shadow: 0px 6px 0px rgba(50, 50, 50, 0.5);
+  -moz-box-shadow:    0px 6px 0px rgba(50, 50, 50, 0.5);
   box-shadow:         0px 6px 20px rgba(50, 50, 50, 0.5);
+  background-color: #eee;
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
-.logo {
-  float: left;
-  margin: 20px;
-}
-
-.menu {
-  margin-right: 20px;
+.col-sm-8.left {
+  margin-top: -10px;
   padding: 0px;
+  padding-bottom: 5px;
+  padding-left: 10px;
+}
+
+.col-sm-4.right {
   text-align: right;
-  float: right;
+  padding-top: 50px;
 }
 
-.menu ul {
-  list-style-type: none;
+.container-fluid.content {
+  padding-right: 10px;
+  padding-left: 10px;
 }
 
-.search {
-  width: 250px;
+.col-sm-3.side-bar {
+  padding: 0px;
 }
 
-.menu_items {
-  color: white;
+.col-sm-12.description {
+  text-align: justify;
+  background-color: #eee;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  padding: 5px;
 }
 
-.menu_items a {
-  color: white;
+.col-sm-12.title {  
+  background-color: #a4d477;
+  font-weight: bold;
+  padding: 0px;
+  padding-left: 5px;
 }
 
-.content {
+.col-sm-12.latest-releases {
+  background-color: #eee;
+  margin-bottom: 5px;
+  padding: 0px;
+}
+
+.col-sm-12.latest-releases-content {
+  padding-left: 30px;
+}
+
+.col-sm-12.filters {
+  background-color: #eee;
+  margin-bottom: 5px;
+  padding: 0px;
+}
+
+.col-sm-12.filters-content{
+  padding-left: 30px;
+}
+
+.col-sm-9.main-pane {  
   padding-top: 10px;
+  padding-left: 10px;
+  padding-right: 0px;
+}
+
+.inner-box.col-sm-12 {
+  text-align: justify;
+  padding: 30px;
+  padding-top: 0px;
+}
+
+date {
+  float: right;
+  margin-left: 20px;
+}
+
+ul.titles-list {
+  list-style-type: circle;
+  padding-left: 30px;
+}
+
+ul.topics-list {
+  list-style-type: none;
+  padding-left: 0px;
+}
+
+table.table-hover.col-sm-12 {
+  margin-bottom: 20px;
+}
+
+table.table-hover.col-sm-12 tr:hover td {
+  background-color: #a4d477;
+}
+
+tr:nth-child(even) {
+  background-color: #eee;
+}
+
+td {
+  vertical-align: top;
+  padding: 5px;
+}
+
+td.name {
+  width: 15%;
+}
+
+td.summary {
+  width: 35%;
+}
+
+td.platforms {
+  width: 10%;
+}
+
+td.topics {
+  width: 20%;
+}
+
+td.licenses {
+  width: 20%;
 }
 
 .code {
@@ -146,9 +227,10 @@ h1 .subtitle {
   font-style: italic;
 }
 
-td {
-  vertical-align: top;
-  padding-left: 16px;
+home {
+  float: right;
+  font-style: italic;
+  margin-right: 30px;
 }
 
 .footer {
@@ -162,10 +244,10 @@ td {
   font-size: 80%;
 }
 
-.legal {
-  margin: 12px;
+.col-sm-12.legal {
   text-align: center;
-  font-size: 70%;
+  font-size: 90%;
+  margin-bottom: 15px;
 }
 
 .attribute {
@@ -179,6 +261,7 @@ td {
   text-align: right;
   float: left;
   margin-right: 8px;
+  font-size: 80%;
 }
 
 .attribute .value {
