Fix issues of two-column layout
* Sort the latest releases correctly to make the newest to be on top.

* Render the side-bar without boxes, just using titles and space.

* Change the font size of the body to be same as the one-column layout.
  This makes it easy to read.

* Add 'All' topic at the top of the topics list which goes to the complete list with all libraries.

* Make the 'last updated' text to appear only on the home page, not on any of the other pages.

* Link the Inqlude logo to the home page.

Resolves: #69

--- a/view/two-column/get.html.haml
+++ b/view/two-column/get.html.haml
@@ -1,10 +1,7 @@
 %home
   = link_to "Home", "index"
 
-%h4
-  How to get libraries
-
-%hr
+%h3 How to get libraries
 
 %p
   This page is about how to use Inqlude as a user, a developer using Qt
