Clarify points of contact
From the experience of the last couple of years it shows that the
mailing list is not used at all by people when contacting us with
questions about Inqlude. All discussions go through issues or
patches, most of them coming via GitHub. To reflect this I'm
removing the mailing list from the web site, so we can close it
down later.

--- a/view/two-column/about.html.haml
+++ b/view/two-column/about.html.haml
@@ -25,8 +25,8 @@
     production use yet. Data is still incomplete, and the tools are
     limited. Feedback and input is appreciated.
 %p
-  If you have questions of comments please feel free to write to the Inqlude
-  mailing list #{link_to "inqlude@kde.org", "mailto:inqlude@kde.org"}.
+  If you have questions of comments please feel free to let us know by
+  #{link_to "creating an issue", "https://github.com/cornelius/inqlude/issues/new"}.
 %p
   Inqlude was created by
   = link_to "Cornelius Schumacher", "mailto:schumacher@kde.org"
