--- a/view/two-column/contribute.html.haml
+++ b/view/two-column/contribute.html.haml
@@ -20,7 +20,7 @@
   for documentation about what to put into the manifest.
 %p
   You can contribute meta data by providing patches to the inqlude-data
-  repository. Use the github mechanisms or just send patches by email.
+  repository. Use the KDE or GitHub mechanisms or just send patches by email.
   Contributions are welcome.
 %br
 
@@ -41,9 +41,9 @@
   out there.
 %br
 
-%h3 Mailing list
+%h3 Discussions
 
 %p
   If you want to discuss any aspects of Inqlude, get in contact with us, have
-  questions, or want to contribute in any other way, the best way is to use the
-  mailing list #{link_to "inqlude@kde.org", "https://mail.kde.org/mailman/listinfo/inqlude"}.
+  questions, or want to contribute in any other way, the best way is to start
+  a thread by #{link_to "creating an issue", "https://github.com/cornelius/inqlude/issues/new"}.
