Refactor and update markup, fix ios icon
- Update Font Awesome to version 4.7.0
- Reorganize layout template and convert the html markup to haml
- Add title tag
- Include link to favicon in markup
- Move js to the end of the body tag instead of in head
- Fix iOS icon sizing and position

--- a/view/two-column/all.html.haml
+++ b/view/two-column/all.html.haml
@@ -23,7 +23,7 @@
         - if library.manifests.last.platforms.include? 'Android'
           %i.fa.fa-android
         - if library.manifests.last.platforms.include? 'iOS'
-          %img{:src => "ios.ico", :height => "15%;"}
+          %span.ios
       %td.topics
         - if library.manifests.last.topics
           - library.manifests.last.topics.each do |topic|
