--- a/view/two-column/group.html.haml
+++ b/view/two-column/group.html.haml
@@ -25,7 +25,7 @@
         - if library.manifests.last.platforms.include? 'Android'
           %i.fa.fa-android
         - if library.manifests.last.platforms.include? 'iOS'
-          %img{:src => "apple.ico", :height => "15%;"}
+          %span.ios
       %td.topics
         - if library.manifests.last.topics
           - library.manifests.last.topics.each do |topic|
