Don't transmit personalized data for search

--- a/view/two-column/search.html.haml
+++ b/view/two-column/search.html.haml
@@ -6,7 +6,7 @@
 
   %hr
 
-  %gcse:searchresults-only
+  %gcse:searchresults-only{ personalizedAds: "false" }
     Loading...
   :javascript
     (function() {
